--- a/cell02/ex02/parallax.html
+++ b/cell02/ex02/parallax.html
@@ -5,17 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="parallax.css" rel="stylesheet" />
-    <title>Document</title>
+    <title>Parallax Demo</title>
   </head>
   <body>
-    <div class="container">
-      <div class="first-image">
-        <h3>Beautiful Background</h3>
-      </div>
-      <div class="content">Hi from 42Bangkok</div>
-      <div class="second-image">
-        <h3>Beautiful Background</h3>
-      </div>
+    <div class="parallax first-image">
+      <div>Beautiful Background</div>
+    </div>
+
+    <div class="content">
+      Hi from 42Bangkok
+    </div>
+
+    <div class="parallax second-image">
+      <div>Another Beautiful Background</div>
     </div>
   </body>
 </html>
